# portfolio

./: .gitignore  ARCHITECTURE.md  Dockerfile  MISSING_ITEMS.md  README.md  exec_summary.md  interview_talking_points.md  model_card_template.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Fraud Detection/: .dockerignore  README.md  requirements.txt
Fraud Detection/notebooks/: 01_eda_and_roadmap.ipynb  02_modeling_and_evaluation.ipynb
Fraud Detection/serve/: Dockerfile  app.py
ds_tools/: README.md  pyproject.toml
ds_tools/src/ds_tools/: __init__.py
ds_tools/src/ds_tools/evaluation/: __init__.py  calibration.py  report.py
ds_tools/src/ds_tools/monitoring/: __init__.py  drift.py
ds_tools/src/ds_tools/preprocessing/: __init__.py  transformers.py
ds_tools/src/ds_tools/visualization/: __init__.py  plots.py
fraud_detection/: README.md  docker-compose.yml
fraud_detection/demo/: generate_synthetic.py  run_demo.sh  train_model.py
fraud_detection/demo/results/: summary.json
fraud_detection/docs/: architecture.md  case_study.md  model_card.md
fraud_detection/notebooks/: 03_monitoring_and_drift.ipynb
fraud_detection/serve/: app.py
genai_agent/: README.md  pyproject.toml
genai_agent/demo/: interactive_demo.py  mock_evaluator.py  run_local_eval.sh
genai_agent/docs/: case_study.md  evaluation.md  personal_usage.md
genai_agent/src/: engine.py  tools.py
ml_platform/: README.md
ml_platform/demo/: pipeline.py  run_pipeline.sh
ml_platform/docs/: architecture.md  monitoring.md
realtime_ml_system/: README.md
realtime_ml_system/demo/: online_inference.py  run_demo.sh  stream_simulator.py
realtime_ml_system/docs/: architecture.md  monitoring.md
tests/: test_basic.py  test_genai_real.py  test_ml_platform_real.py  test_realtime_ml_real.py
(+5 files in other folders)
