[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-portfolio"
version = "0.1.0"
description = "ML Engineering Portfolio — fraud detection, GenAI agents, production ML systems"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Vitor de Siqueira Rodrigues"}]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "lightgbm>=4.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
full = [
    "shap>=0.43",
    "xgboost>=2.0",
    "catboost>=1.2",
    "torch>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "evidently>=0.4",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["ds_tools/src", "fraud_detection/demo", "genai_agent/demo"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
